# omnidrop-ai

./: .coderabbit.yaml  .env.dev.example  .env.example  .env.sandbox.example  .gitignore  ARCHITECTURE_SPEC.md  CLAUDE.md  Makefile  README.md  docker-compose.staging.yml  docker-compose.yml  render.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-dev.yml
backend/: Dockerfile  requirements-dev.txt  requirements.txt
backend/api/: main.py
backend/core/: config.py  logging.py  security.py  sentry.py
backend/services/: claude_service.py  notification_service.py  supabase_client.py  temporal_client.py  unstructured_service.py
backend/tests/: test_webhooks.py
backend/workers/: celery_app.py  intake_tasks.py
data_pipelines/: requirements.txt
data_pipelines/.dlt/: config.toml  secrets.toml.example
data_pipelines/acculynx_sync/: pipeline.py
docs/: PRD.md  agent-team-spawn-prompt.md  agent-teams-reference.md  api-contracts.md  claude-skills-reference.md  execution-plan.md  manual-setup-steps.md  technical-spec.md
docs/archive/: agent-team-spawn-prompt-phase2.md
docs/handoffs/: current.md
docs/references/: README.md  acculynx.md  cronjob.md  hookdeck.md  jobnimbus.md  jobtread.md  render.md  sentry.md  servicetitan.md  session-handoff-system.md  supabase.md  unstructured.md  voyage-ai.md  workos.md
frontend/: .env.local.example  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
frontend/app/: global-error.tsx  icon.tsx  layout.tsx  page.tsx
frontend/components/: cmd-k.tsx  freemium-banner.tsx  ops-queue-badge.tsx  session-provider.tsx  sign-out-button.tsx
shared/: README.md  constants.py  pyproject.toml
shared/models/: __init__.py  acculynx.py  jobs.py
supabase/: config.toml  seed.sql
tests/: conftest.py  test_organizations.py  test_phase3.py  test_pipeline_integration.py  test_services.py  test_webhook.py
workers/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  sentry_init.py  worker.py
(+55 files in other folders)
