[project]
name = "omnidrop-shared"
version = "0.1.0"
description = "Shared Pydantic models and constants for OmniDrop AI services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
