[project]
name = "omnidrop-shared"
version = "0.1.0"
description = "Shared Pydantic models and constants for OmniDrop AI services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# force-include maps the contents of shared/ into the shared/ namespace in the wheel
# so `from shared.models.acculynx import X` and `from shared.constants import Y` work
[tool.hatch.build.targets.wheel.force-include]
"." = "shared/"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
