[project]
name = "omnidrop-shared"
version = "0.1.0"
description = "Shared Pydantic models and constants for OmniDrop AI services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Maps the Python package name "shared" to the current directory (shared/).
# This makes `from shared.constants import X` and `from shared.models.acculynx import Y` work.
package-dir = {"shared" = "."}
packages = ["shared", "shared.models"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
